使用 Colaboratory 创建

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -54,6 +54,389 @@
           "execution_count": 1
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HB8J0432gOZZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "748a4337-3f37-466b-8a11-2a4b17fdeba3"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.linspace(2.0, 3.0, num=5, endpoint=False)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2. , 2.2, 2.4, 2.6, 2.8])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ipAohN6Xgria",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2b03b6c8-a8b9-4fd9-dcf9-50e422040167"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.linspace(2.0, 3.0, num=5, retstep=True)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([2.  , 2.25, 2.5 , 2.75, 3.  ]), 0.25)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DCtON5NTgvTK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "06d3cae9-4cd4-4e29-b558-97ee9d5a52e6"
+      },
+      "source": [
+        "import numpy as np\n",
+        "ar2=np.array([[0,3,5],[2,8,7]])\n",
+        "ar2.shape"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T96xxi6QgxoZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "e2178296-1c88-40da-b014-2104b57d6ca6"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "a=np.array([[0,1],[2,3]])\n",
+        "\n",
+        "a.reshape(1,4)\n",
+        "a.reshape(4,1)\n",
+        "\n",
+        "print(a)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0 1]\n",
+            " [2 3]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w31ovyOHg0BK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        " "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kh6t0gmMg1o6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2e474846-a092-4f42-b2b3-2168c049f742"
+      },
+      "source": [
+        "b = a.reshape(1,4)\n",
+        "b\n",
+        "#b.shape"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 1, 2, 3]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8pp1DdMMg4sh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8ebb5efc-5c7e-4867-9690-f04d486d113c"
+      },
+      "source": [
+        "\n",
+        "c = a.reshape(4,1)\n",
+        "c.shape"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4, 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cF1sf_MOg7Px",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "7a18664b-ce63-4080-da74-f620c80cc3fb"
+      },
+      "source": [
+        "import numpy as np\n",
+        "x= np.arange(2,10).reshape(2,4)\n",
+        "x"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2, 3, 4, 5],\n",
+              "       [6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9_nAhl_bg81p",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "outputId": "0bd26438-6a7c-4598-edcf-29aa7c436223"
+      },
+      "source": [
+        "import numpy as np\n",
+        "x= np.arange(24).reshape(4,3,2)\n",
+        "x"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 0,  1],\n",
+              "        [ 2,  3],\n",
+              "        [ 4,  5]],\n",
+              "\n",
+              "       [[ 6,  7],\n",
+              "        [ 8,  9],\n",
+              "        [10, 11]],\n",
+              "\n",
+              "       [[12, 13],\n",
+              "        [14, 15],\n",
+              "        [16, 17]],\n",
+              "\n",
+              "       [[18, 19],\n",
+              "        [20, 21],\n",
+              "        [22, 23]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kZo7IjHTg_rb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "c01bdab2-a620-46ae-bf13-8beda6fbf2d6"
+      },
+      "source": [
+        "np.arange(24).reshape(3,4,2)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 0,  1],\n",
+              "        [ 2,  3],\n",
+              "        [ 4,  5],\n",
+              "        [ 6,  7]],\n",
+              "\n",
+              "       [[ 8,  9],\n",
+              "        [10, 11],\n",
+              "        [12, 13],\n",
+              "        [14, 15]],\n",
+              "\n",
+              "       [[16, 17],\n",
+              "        [18, 19],\n",
+              "        [20, 21],\n",
+              "        [22, 23]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YDzIl6RshFb0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "outputId": "c7e642f0-b867-459a-c853-f63d3bf07e8e"
+      },
+      "source": [
+        "np.arange(24).reshape(4,3,2)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 0,  1],\n",
+              "        [ 2,  3],\n",
+              "        [ 4,  5]],\n",
+              "\n",
+              "       [[ 6,  7],\n",
+              "        [ 8,  9],\n",
+              "        [10, 11]],\n",
+              "\n",
+              "       [[12, 13],\n",
+              "        [14, 15],\n",
+              "        [16, 17]],\n",
+              "\n",
+              "       [[18, 19],\n",
+              "        [20, 21],\n",
+              "        [22, 23]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oy8mJER_hIYa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        " "
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
