使用 Colaboratory 创建

--- a/GOOD人工智慧體驗營Neural_Style_Transfer_with_Eager_Execution.ipynb
+++ b/GOOD人工智慧體驗營Neural_Style_Transfer_with_Eager_Execution.ipynb
@@ -105,7 +105,7 @@
         "colab": {}
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/MyDearGreatTeacher/AI4high/master/data/pics/photo.jpg"
+        "!wget https://attach.mobile01.com/attach/201905/mobile01-55c9bbfe9cc415e9faacabb80148fe55.jpg"
       ],
       "execution_count": 0,
       "outputs": []
@@ -129,7 +129,7 @@
       },
       "source": [
         "#content_path =填你的照片\n",
-        "content_path = 'photo.jpg'"
+        "content_path = 'mobile01-55c9bbfe9cc415e9faacabb80148fe55.jpg'"
       ],
       "execution_count": 0,
       "outputs": []
